@@ -1,20 +1,28 @@
 package com.flashsale.productservice.service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.flashsale.commonlib.dto.ApiResponse;
 import com.flashsale.commonlib.exception.AppException;
 import com.flashsale.commonlib.exception.ErrorCode;
-import com.flashsale.productservice.domain.model.Category;
-import com.flashsale.productservice.domain.repository.CategoryRepository;
-import com.flashsale.productservice.domain.repository.ProductRepository;
-import com.flashsale.productservice.dto.request.CreateCategoryRequest;
-import com.flashsale.productservice.dto.request.UpdateCategoryRequest;
-import com.flashsale.productservice.dto.response.CategoryResponse;
+import com.flashsale.commonlib.security.UserDetailsImpl;
+import com.flashsale.productservice.dto.category.CategoryBreadcrumb;
+import com.flashsale.productservice.dto.category.CategoryRequest;
+import com.flashsale.productservice.dto.category.CategoryResponse;
+import com.flashsale.productservice.entity.Category;
+import com.flashsale.productservice.repository.CategoryRepository;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -23,150 +31,223 @@ import java.util.stream.Collectors;
 public class CategoryService {
 
     private final CategoryRepository categoryRepository;
-    private final ProductRepository productRepository;
+    private final ObjectMapper objectMapper;
+    private final KafkaTemplate<String, String> kafkaTemplate;
 
-    /**
-     * Build hierarchical category tree from flat list.
-     * Only active categories (isActive=true) are included.
-     * Children are recursively built and sorted by sortOrder.
-     */
-    public List<CategoryResponse> buildCategoryTree(List<Category> allCategories) {
-        Map<String, List<Category>> childrenMap = allCategories.stream()
-                .filter(c -> c.getParentId() != null)
-                .collect(Collectors.groupingBy(Category::getParentId));
-
-        List<Category> rootCategories = allCategories.stream()
-                .filter(c -> c.getParentId() == null && Boolean.TRUE.equals(c.getIsActive()))
-                .sorted((a, b) -> {
-                    int orderA = a.getSortOrder() != null ? a.getSortOrder() : 0;
-                    int orderB = b.getSortOrder() != null ? b.getSortOrder() : 0;
-                    return Integer.compare(orderA, orderB);
-                })
-                .toList();
-
-        return rootCategories.stream()
-                .map(root -> buildCategoryNode(root, childrenMap))
-                .toList();
+    @Transactional(readOnly = true)
+    public ApiResponse<List<CategoryResponse>> getCategoryTree() {
+        List<Category> rootCategories = categoryRepository.findByParentIdIsNullAndDeletedAtIsNull();
+        List<CategoryResponse> tree = rootCategories.stream()
+                .filter(Category::getIsActive)
+                .map(this::toTreeNode)
+                .collect(Collectors.toList());
+        return ApiResponse.success(tree);
     }
 
-    private CategoryResponse buildCategoryNode(Category category, Map<String, List<Category>> childrenMap) {
-        List<Category> children = childrenMap.getOrDefault(category.getId(), new ArrayList<>());
+    @Transactional(readOnly = true)
+    public ApiResponse<CategoryResponse> getCategoryDetail(UUID categoryId) {
+        Category category = categoryRepository.findById(categoryId)
+                .filter(c -> c.getDeletedAt() == null)
+                .orElseThrow(() -> new AppException(ErrorCode.NOT_FOUND, "Category not found"));
 
-        List<CategoryResponse> childResponses = children.stream()
-                .filter(c -> Boolean.TRUE.equals(c.getIsActive()))
-                .sorted((a, b) -> {
-                    int orderA = a.getSortOrder() != null ? a.getSortOrder() : 0;
-                    int orderB = b.getSortOrder() != null ? b.getSortOrder() : 0;
-                    return Integer.compare(orderA, orderB);
-                })
-                .map(child -> buildCategoryNode(child, childrenMap))
-                .toList();
-
-        CategoryResponse response = CategoryResponse.from(category);
-        response.setChildren(childResponses.isEmpty() ? null : childResponses);
-        return response;
+        CategoryResponse response = toDetailResponse(category);
+        return ApiResponse.success(response);
     }
 
-    /**
-     * Return hierarchical tree of all active categories.
-     */
-    public List<CategoryResponse> getAllCategories() {
-        List<Category> allCategories = categoryRepository.findAll();
-        return buildCategoryTree(allCategories);
-    }
-
-    /**
-     * Create a new category.
-     * Sets isActive=true by default, sortOrder=0 if not provided.
-     */
-    public CategoryResponse createCategory(CreateCategoryRequest req) {
-        if (categoryRepository.findBySlug(req.getSlug()).isPresent()) {
-            throw new AppException(ErrorCode.ALREADY_EXISTS, "Slug đã tồn tại: " + req.getSlug());
+    @Transactional
+    public ApiResponse<CategoryResponse> createCategory(CategoryRequest request, UserDetailsImpl user) {
+        String slug = request.getSlug();
+        if (slug == null || slug.isBlank()) {
+            slug = generateSlug(request.getName());
+        }
+        if (categoryRepository.existsBySlug(slug)) {
+            throw new AppException(ErrorCode.ALREADY_EXISTS, "Category with slug already exists");
         }
 
         Category category = Category.builder()
-                .name(req.getName())
-                .slug(req.getSlug())
-                .parentId(req.getParentId())
-                .level(req.getLevel())
-                .description(req.getDescription())
-                .imageUrl(req.getImageUrl())
-                .isActive(true)
-                .sortOrder(req.getSortOrder() != null ? req.getSortOrder() : 0)
+                .name(request.getName())
+                .slug(slug)
+                .description(request.getDescription())
+                .imageUrl(request.getImageUrl())
+                .sortOrder(request.getSortOrder() != null ? request.getSortOrder() : 0)
+                .parentId(request.getParentId())
+                .isActive(request.getIsActive() != null ? request.getIsActive() : true)
                 .build();
 
-        return CategoryResponse.from(categoryRepository.save(category));
+        category = categoryRepository.save(category);
+        emitEvent(com.flashsale.commonlib.event.KafkaTopics.CATEGORY_UPDATED, category.getId().toString(),
+                Map.of("categoryId", category.getId(), "action", "created"));
+        return ApiResponse.success(toDetailResponse(category));
     }
 
-    /**
-     * Update an existing category.
-     * Handles isActive and sortOrder updates.
-     */
-    public CategoryResponse updateCategory(String categoryId, UpdateCategoryRequest req) {
+    @Transactional
+    public ApiResponse<CategoryResponse> updateCategory(UUID categoryId, CategoryRequest request, UserDetailsImpl user) {
         Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new AppException(ErrorCode.NOT_FOUND, "Danh mục không tồn tại"));
+                .filter(c -> c.getDeletedAt() == null)
+                .orElseThrow(() -> new AppException(ErrorCode.NOT_FOUND, "Category not found"));
 
-        if (req.getSlug() != null && !req.getSlug().equals(category.getSlug())) {
-            if (categoryRepository.findBySlug(req.getSlug()).isPresent()) {
-                throw new AppException(ErrorCode.ALREADY_EXISTS, "Slug đã tồn tại: " + req.getSlug());
+        if (request.getName() != null) {
+            category.setName(request.getName());
+        }
+        if (request.getDescription() != null) {
+            category.setDescription(request.getDescription());
+        }
+        if (request.getImageUrl() != null) {
+            category.setImageUrl(request.getImageUrl());
+        }
+        if (request.getSortOrder() != null) {
+            category.setSortOrder(request.getSortOrder());
+        }
+        if (request.getParentId() != null) {
+            if (request.getParentId().equals(categoryId)) {
+                throw new AppException(ErrorCode.BAD_REQUEST, "Category cannot be its own parent");
             }
-            category.setSlug(req.getSlug());
+            category.setParentId(request.getParentId());
+        }
+        if (request.getIsActive() != null) {
+            category.setIsActive(request.getIsActive());
+        }
+        if (request.getSlug() != null && !request.getSlug().equals(category.getSlug())) {
+            if (categoryRepository.existsBySlugAndIdNot(request.getSlug(), categoryId)) {
+                throw new AppException(ErrorCode.ALREADY_EXISTS, "Slug already exists");
+            }
+            category.setSlug(request.getSlug());
+        } else if (request.getName() != null) {
+            category.setSlug(generateSlug(request.getName()));
         }
 
-        if (req.getName() != null)               category.setName(req.getName());
-        if (req.getParentId() != null)           category.setParentId(req.getParentId());
-        if (req.getLevel() != null)              category.setLevel(req.getLevel());
-        if (req.getDescription() != null)        category.setDescription(req.getDescription());
-        if (req.getImageUrl() != null)           category.setImageUrl(req.getImageUrl());
-        if (req.getIsActive() != null)           category.setIsActive(req.getIsActive());
-        if (req.getSortOrder() != null)          category.setSortOrder(req.getSortOrder());
+        category = categoryRepository.save(category);
 
-        return CategoryResponse.from(categoryRepository.save(category));
+        if (!category.getIsActive()) {
+            deactivateChildren(categoryId);
+        }
+
+        emitEvent(com.flashsale.commonlib.event.KafkaTopics.CATEGORY_UPDATED, category.getId().toString(),
+                Map.of("categoryId", category.getId(), "action", "updated"));
+        return ApiResponse.success(toDetailResponse(category));
     }
 
-    /**
-     * Delete a category.
-     * Only allows deletion if:
-     * - isActive=true
-     * - No sub-categories
-     * - No published products
-     */
-    public void deleteCategory(String categoryId) {
+    @Transactional
+    public ApiResponse<Void> deleteCategory(UUID categoryId) {
         Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new AppException(ErrorCode.NOT_FOUND, "Danh mục không tồn tại"));
+                .filter(c -> c.getDeletedAt() == null)
+                .orElseThrow(() -> new AppException(ErrorCode.NOT_FOUND, "Category not found"));
 
-        // Only allow deleting active categories
-        if (!Boolean.TRUE.equals(category.getIsActive())) {
-            throw new AppException(ErrorCode.ALREADY_EXISTS,
-                    "Danh mục đang không hoạt động, không thể xóa");
-        }
-
-        // Block if it has sub-categories
-        List<Category> subCategories = categoryRepository.findByParentId(categoryId);
-        if (!subCategories.isEmpty()) {
-            // Only count active sub-categories as blocking
-            long activeSubCount = subCategories.stream()
-                    .filter(c -> Boolean.TRUE.equals(c.getIsActive()))
-                    .count();
-            if (activeSubCount > 0) {
-                throw new AppException(ErrorCode.ALREADY_EXISTS,
-                        "Danh mục đang có danh mục con đang hoạt động, không thể xóa");
-            }
-        }
-
-        // Block if it has published products
-        boolean hasProducts = productRepository.findByStatusAndCategoryIdAndDeletedAtIsNull(
-                        "PUBLISHED", categoryId,
-                        org.springframework.data.domain.PageRequest.of(0, 1))
-                .hasContent();
-        if (hasProducts) {
-            throw new AppException(ErrorCode.ALREADY_EXISTS,
-                    "Danh mục đang có sản phẩm, không thể xóa");
-        }
-
-        // Soft-delete: mark as inactive instead of hard delete
-        category.setIsActive(false);
+        category.setDeletedAt(LocalDateTime.now());
         categoryRepository.save(category);
-        log.info("Soft-deleted category: id={}", categoryId);
+
+        emitEvent(com.flashsale.commonlib.event.KafkaTopics.CATEGORY_UPDATED, category.getId().toString(),
+                Map.of("categoryId", category.getId(), "action", "deleted"));
+        deactivateChildren(categoryId);
+
+        return ApiResponse.success(null);
+    }
+
+    @Transactional(readOnly = true)
+    public void validateLeafCategory(UUID categoryId) {
+        List<Category> children = categoryRepository.findByParentIdAndDeletedAtIsNull(categoryId);
+        if (!children.isEmpty()) {
+            throw new AppException(ErrorCode.BAD_REQUEST, "Cannot create product in a parent category. Choose a leaf category.");
+        }
+    }
+
+    private CategoryResponse toTreeNode(Category category) {
+        List<Category> children = categoryRepository.findByParentIdAndDeletedAtIsNull(category.getId());
+        List<CategoryResponse> childResponses = children.stream()
+                .filter(Category::getIsActive)
+                .map(this::toTreeNode)
+                .collect(Collectors.toList());
+
+        return CategoryResponse.builder()
+                .id(category.getId())
+                .name(category.getName())
+                .slug(category.getSlug())
+                .description(category.getDescription())
+                .imageUrl(category.getImageUrl())
+                .sortOrder(category.getSortOrder())
+                .isActive(category.getIsActive())
+                .parentId(category.getParentId())
+                .children(childResponses.isEmpty() ? null : childResponses)
+                .productCount(categoryRepository.countProductsByCategoryId(category.getId()))
+                .build();
+    }
+
+    private CategoryResponse toDetailResponse(Category category) {
+        List<CategoryBreadcrumb> breadcrumb = buildBreadcrumb(category);
+
+        List<Category> children = categoryRepository.findByParentIdAndDeletedAtIsNull(category.getId());
+        List<CategoryResponse> childResponses = children.stream()
+                .map(child -> CategoryResponse.builder()
+                        .id(child.getId())
+                        .name(child.getName())
+                        .slug(child.getSlug())
+                        .description(child.getDescription())
+                        .imageUrl(child.getImageUrl())
+                        .sortOrder(child.getSortOrder())
+                        .isActive(child.getIsActive())
+                        .parentId(child.getParentId())
+                        .productCount(categoryRepository.countProductsByCategoryId(child.getId()))
+                        .build())
+                .collect(Collectors.toList());
+
+        return CategoryResponse.builder()
+                .id(category.getId())
+                .name(category.getName())
+                .slug(category.getSlug())
+                .description(category.getDescription())
+                .imageUrl(category.getImageUrl())
+                .sortOrder(category.getSortOrder())
+                .isActive(category.getIsActive())
+                .parentId(category.getParentId())
+                .children(childResponses.isEmpty() ? null : childResponses)
+                .productCount(categoryRepository.countProductsByCategoryId(category.getId()))
+                .breadcrumb(breadcrumb)
+                .build();
+    }
+
+    private List<CategoryBreadcrumb> buildBreadcrumb(Category category) {
+        List<CategoryBreadcrumb> breadcrumb = new ArrayList<>();
+        Category current = category;
+        while (current != null) {
+            breadcrumb.add(0, CategoryBreadcrumb.builder()
+                    .id(current.getId())
+                    .name(current.getName())
+                    .slug(current.getSlug())
+                    .build());
+            if (current.getParentId() != null) {
+                current = categoryRepository.findById(current.getParentId())
+                        .filter(c -> c.getDeletedAt() == null)
+                        .orElse(null);
+            } else {
+                current = null;
+            }
+        }
+        return breadcrumb;
+    }
+
+    private void deactivateChildren(UUID parentId) {
+        List<Category> children = categoryRepository.findByParentIdAndDeletedAtIsNull(parentId);
+        for (Category child : children) {
+            child.setIsActive(false);
+            categoryRepository.save(child);
+            deactivateChildren(child.getId());
+        }
+    }
+
+    private String generateSlug(String name) {
+        return name.toLowerCase()
+                .replaceAll("[^a-z0-9\\s-]", "")
+                .replaceAll("\\s+", "-")
+                .replaceAll("-+", "-")
+                .replaceAll("^-|-$", "");
+    }
+
+    private void emitEvent(String topic, String key, Map<String, Object> payload) {
+        try {
+            String value = objectMapper.writeValueAsString(payload);
+            kafkaTemplate.send(topic, key, value);
+        } catch (Exception e) {
+            log.error("Failed to emit Kafka event: topic={}, key={}", topic, key, e);
+        }
     }
 }
